--- a/online-zoo/sass/components/main/_pets.scss
+++ b/online-zoo/sass/components/main/_pets.scss
@@ -60,7 +60,7 @@
     justify-content: center;
     width: 62px;
     height: 100%;
-    z-index: 9999;
+    z-index: 9998;
     @media (max-width: $tablet-width) {
         top: -2px;
     }
